--- a/src/main.scss
+++ b/src/main.scss
@@ -1,8 +1,45 @@
-$primary: #101010;
-$fg: #ffffff;
+@import url("https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;600&family=Inter:wght@300;400;500&family=Secular+One&display=swap");
+
+$black: #323232;
+$white: #f7fff7;
+$grey: #ebebeb;
+$darkgrey: #b2b2b2;
+$primary: #3f3f3f;
+$secondary: #ffa9a3;
 
 html {
-  margin: 0;
-  background-color: $primary;
-  color: $fg;
+    background-color: $white;
+    color: $black;
+}
+
+* {
+    font-family: Inter, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+        Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+        sans-serif;
+    margin: 0;
+}
+
+::-moz-selection,
+::selection {
+    background: $darkgrey;
+}
+
+.code {
+    font-family: "Fira Code", monospace;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont,
+        "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+        "Helvetica Neue", sans-serif;
+    font-weight: 500;
+}
+
+textarea {
+    resize: none;
 }
