--- a/src/notes/notes.scss
+++ b/src/notes/notes.scss
@@ -3,7 +3,7 @@
 .editor {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-areas: "input output";
+    grid-template-areas: 'input output';
     margin: auto;
     width: 80vw;
     height: 80vh;
