Notes: Allow the user to set a filename.

--- a/src/main.scss
+++ b/src/main.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;600&family=Inter:wght@300;400;500&family=Secular+One&display=swap');
 
 $black: #0f0a0a;
+$blackvar: #353030;
 $white: #f7f3f3;
 
 $grey: #e1dbd8;
@@ -27,7 +28,7 @@ html {
 
 ::-moz-selection,
 ::selection {
-    background: $darkgrey;
+    background: $primaryvar;
 }
 
 .code {
