Nav: Formatting and nest navbar children.

--- a/src/main.scss
+++ b/src/main.scss
@@ -5,7 +5,7 @@ $blackvar: #353030;
 $white: #f7f3f3;
 
 $grey: #e1dbd8;
-$lightgrey: #F5EFED;
+$lightgrey: #f5efed;
 $darkgrey: #bfbab7;
 
 $primary: #7e8d85;
