--- a/src/layout/layout.scss
+++ b/src/layout/layout.scss
@@ -1,30 +1,32 @@
 @import '../main.scss';
 
-ul {
-    list-style-type: none;
-    margin-bottom: 10pt;
-    padding: 10pt 10vw 0 10vw;
-    height: 32pt;
-    border-bottom: 1px $grey solid;
-}
+.navbar {
+    ul {
+        list-style-type: none;
+        margin-bottom: 10pt;
+        padding: 10pt 10vw 0 10vw;
+        height: 32pt;
+        border-bottom: 1px $grey solid;
+    }
 
-li {
-    display: inline;
-    margin-right: 10pt;
-}
+    li {
+        display: inline;
+        margin-right: 10pt;
+    }
 
-a,
-a:visited {
-    color: $black;
-    text-decoration: none;
-    line-height: 24pt;
-    padding: 8pt;
-    text-align: center;
-    border-radius: 6px;
-    transition: 0.3s;
-    font-weight: 400;
-}
+    a,
+    a:visited {
+        color: $black;
+        text-decoration: none;
+        line-height: 24pt;
+        padding: 8pt;
+        text-align: center;
+        border-radius: 6px;
+        transition: 0.3s;
+        font-weight: 400;
+    }
 
-a:hover {
-    opacity: 0.6;
+    a:hover {
+        opacity: 0.6;
+    }
 }
