--- a/src/web/src/layout/layout.scss
+++ b/src/web/src/layout/layout.scss
@@ -1,4 +1,5 @@
 @import '../main.scss';
+@import '../sass/colors.scss';
 
 .navbar {
     ul {
@@ -6,7 +7,7 @@
         margin-bottom: 10pt;
         padding: 10pt 10vw 0 10vw;
         height: 32pt;
-        border-bottom: 1px $grey solid;
+        border-bottom: 1px theme-color(border) solid;
     }
 
     li {
@@ -16,7 +17,7 @@
 
     a,
     a:visited {
-        color: $black;
+        color: theme-color(fg);
         text-decoration: none;
         line-height: 24pt;
         padding: 8pt;
