UI: Add padding to all content.

--- a/src/web/src/notes/notes.scss
+++ b/src/web/src/notes/notes.scss
@@ -97,7 +97,7 @@ textarea#input {
     outline: none;
     border: none;
     background-color: transparent;
-    margin: 0 6pt 6pt 10vw;
+    margin-bottom: 10pt;
     padding: 8pt;
     font-size: 20pt;
     font-weight: 600;
