UI: Change colors to work better with white text.

--- a/src/web/src/sass/colors.scss
+++ b/src/web/src/sass/colors.scss
@@ -6,10 +6,10 @@
     --bg-variant: #ffffff;
     --bg-lighter: #f3f2f2;
     --border: #e7eeec;
-    --primary: #009ffd;
-    --primary-variant: #21aaf9;
-    --secondary: #959eef;
-    --secondary-variant: #6874e8;
+    --primary: #00c275;
+    --primary-variant: #0fb371;
+    --secondary: #6272ff;
+    --secondary-variant: #5564e6;
     --gradient: #ffffff;
     --shadow: rgba(149, 157, 165, 0.1);
 }
@@ -18,13 +18,13 @@
     --fg: #ffffff;
     --fg-variant: #f3f7f6;
     --fg-lighter: #dbe0df;
-    --bg: #1e1e24;
-    --bg-variant: #222228;
-    --border: #414542;
-    --primary: #009ffd;
-    --primary-variant: #21aaf9;
-    --secondary: #959eef;
-    --secondary-variant: #6874e8;
+    --bg: #1c1c1c;
+    --bg-variant: #1b1b1b;
+    --border: #292929;
+    --primary: #00c275;
+    --primary-variant: #0fb371;
+    --secondary: #6272ff;
+    --secondary-variant: #5564e6;
     --gradient: #ffffff;
     --shadow: #00000000;
 }
