UI: Start implementing sign in page.

--- a/src/web/src/sass/colors.scss
+++ b/src/web/src/sass/colors.scss
@@ -5,6 +5,7 @@
     --bg: #fcfcfc;
     --bg-variant: #ffffff;
     --bg-lighter: #f3f2f2;
+    --grey: #7a7a7a;
     --border: #e7eeec;
     --primary: #00c275;
     --primary-variant: #0fb371;
@@ -20,6 +21,8 @@
     --fg-lighter: #dbe0df;
     --bg: #1c1c1c;
     --bg-variant: #1b1b1b;
+    --bg-lighter: #242424;
+    --grey: #919191;
     --border: #292929;
     --primary: #00c275;
     --primary-variant: #0fb371;
