--- a/src/web/src/sign-in/signin.scss
+++ b/src/web/src/sign-in/signin.scss
@@ -3,32 +3,23 @@
 #sign-in-wrapper {
     display: grid;
     height: calc(100vh - 42pt);
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 1fr 1fr;
     position: absolute;
     top: 0;
     z-index: -1;
-    padding-top: 42pt;
-    > * {
-        padding-left: 30%;
-        padding-top: 20pt;
-    }
+    padding: 42pt;
+    width: inherit;
 }
+
 #form {
     display: block;
-    flex-direction: column;
-    justify-content: center;
-    margin: auto;
-    width: 12vw;
-    text-align: center;
-
-    padding: 10pt;
+    grid-column: 1 1;
     padding-bottom: 0;
-    border-radius: 8px;
+    padding-top: 35vh;
+    padding-left: 25%;
 
     > * {
-        margin: auto;
         margin-bottom: 12pt;
-        text-align: center;
     }
 
     button {
@@ -40,6 +31,7 @@
 
     button:hover {
         background-color: var(--primary);
+        color: var(--primary-contrast);
         cursor: pointer;
     }
 
@@ -47,15 +39,19 @@
         color: var(--grey);
     }
 
-    .or-line {
+    .shrink {
+        max-width: 300px;
+    }
+
+    .horizontal-line {
         text-align: center;
         overflow: hidden;
         font-size: 11pt;
         color: var(--fg);
     }
 
-    .or-line::before,
-    .or-line::after {
+    .horizontal-line::before,
+    .horizontal-line::after {
         background-color: var(--border);
         content: '';
         display: inline-block;
@@ -65,12 +61,12 @@
         width: 50%;
     }
 
-    .or-line::before {
+    .horizontal-line::before {
         right: 0.5em;
         margin-left: -50%;
     }
 
-    .or-line::after {
+    .horizontal-line::after {
         left: 0.5em;
         margin-right: -50%;
     }
